--- a/app/views/garage/index.html.erb
+++ b/app/views/garage/index.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 <% end %>
 
-<h1>Your Pragmatic Catalog</h1>
+<h1>Jason's Online Garage Sale</h1>
 
 <% @products.each do |product| %>
   <div class="entry">
@@ -11,6 +11,7 @@
     <%= sanitize(product.description) %>
     <div class="price_line">
       <span class="price"><%= number_to_currency(product.list_price) %></span>
+      <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
     </div>
   </div>
 <% end %>
